<resources>
    <string name="app_name">FITZONE TFG</string>
    <string name="logIn">INICIAR SESIÓN</string>
    <string name="registrar"> REGÍSTRATE</string>

    //REGISTRARSE:
    <string name="registrarse"> REGISTRARSE </string>
    <string name="nombre"> Nombre: </string>
    <string name="apellidos"> Apellidos: </string>
    <string name="gmail"> Correo electrónico </string>
    <string name="correoElectronico"> ejemplo1234@gmail.com </string>
    <string name="contraseña"> Contraseña</string>
    <string name="dni"> DNI</string>
    <string name="telefono"> MÓVIL : 612345678</string>
    <string name="sexo"> SEXO </string>
    <string name="sexo_hombre">   H </string>
    <string name="sexo_mujer">   M </string>
    <string name="tipo"> TIPO </string>
    <string name="tipoUsuario"> Usuario </string>
    <string name="tipoTecnico"> Técnico </string>


    <string name="ajuste"> AJUSTES</string>
    <string name="cambiarContraseña"> CAMBIAR CONTRASEÑA</string>
    <string name="cambiarGmail"> CAMBIAR CORREO ELECTRÓNICO</string>
    <string name="cambiarDatosPersonales"> CAMBIAR DATOS PERSONALES</string>

    <string name="horario"> HORARIOS </string>

    <string name="mantenerInicioSesion">Mantener sesión iniciada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    /*
    <string name="default_web_client_id">AIzaSyCyniHoztDZ-5QDMk9lFpybX0vlX7slEZ4</string>
    */
</resources>
